--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "node-express-api",
-  "description": "Simple api sample in Node",
+  "name": "nfc-backend",
+  "description": "Backend for NFC project",
   "version": "1.0.0",
   "private": true,
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
@@ -16,11 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.3",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "mongoose": "^8.7.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
