--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
   "license": "Apache-2.0",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
+    "express-validator": "^7.2.0",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.3"
+    "mongoose": "^8.7.3",
+    "winston": "^3.16.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
