FEAT: Added swagger

--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "mongoose": "^8.7.3",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "winston": "^3.16.0"
+    "winston": "^3.16.0",
+    "swagger-ui-express": "^5.0.0",
+    "swagger-jsdoc": "^6.2.8"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
