--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chalk": "^5.3.0",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
